<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/ggwp"
    tools:context="com.kmpstudios.admin.employeetracker.UpdateProfile">

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/phone"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="11dp"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:background="@color/black"
        android:text="@string/updateb"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/cpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_marginBottom="46dp"
        android:text="@string/changepn"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/cpn"
        android:layout_marginTop="41dp"
        android:text="@string/changeel"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lb"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update"
        android:layout_alignEnd="@+id/email"
        android:layout_marginBottom="58dp"
        android:text="@string/lb" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:text="@string/chp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/pass"
        android:layout_below="@+id/pass"
        android:layout_marginTop="14dp"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Password"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />


</RelativeLayout>
