<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/ggwp"
    tools:context="com.kmpstudios.admin.employeetracker.MainActivity">

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/roundcorner"
        android:id="@+id/username"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/roundcorner"
        android:id="@+id/password"
        android:layout_above="@+id/emp"
        android:layout_alignStart="@+id/username"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:text="@string/sign_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/signin"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/sign_emp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:id="@+id/emp"
        android:textColor="@color/white"
        android:layout_above="@+id/admin"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sign"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:id="@+id/signin"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/reg_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/nry"
        android:color="@color/black"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:id="@+id/reg_text"
        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:text="@string/register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:id="@+id/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/profile"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
