<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/ggwp"
    tools:context="com.kmpstudios.admin.employeetracker.Registeration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:id="@+id/name"
        android:textColorHint="@color/white"
        android:layout_marginTop="84dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:background="@drawable/roundcorner"
        android:hint="@string/email"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/email"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:background="@drawable/roundcorner"
        android:hint="@string/phone"
        android:ems="10"
        android:maxLength="10"
        android:layout_marginTop="26dp"
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:background="@drawable/roundcorner"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_below="@+id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_marginTop="20dp"
        android:id="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/cp"
        android:textColorHint="@color/white"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="23dp"
        android:id="@+id/cp" />

    <Button
        android:text="@string/reg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_below="@+id/cp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/register" />


</RelativeLayout>
