<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ggwp"
    tools:context="com.kmpstudios.admin.employeetracker.LoggedIn">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="75dp"
        android:layout_toStartOf="@+id/som"
        android:text="@string/latitude"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:textSize="17sp"
        android:text=""
        android:layout_marginTop="13dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="100dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/longitude"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/latitude"/>

    <Button
        android:id="@+id/som"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/som" />

    <Button
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/som"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:text="@string/update" />

    <Button
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="17dp" />


</RelativeLayout>
