<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ggwp"
    tools:context="com.kmpstudios.admin.employeetracker.LoggedInAdmin">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="30dp"
        android:id="@+id/listview"/>

    <Button
        android:id="@+id/som"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:background="@color/black"
        android:text="@string/som"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/som"
        android:layout_alignBottom="@+id/som"
        android:layout_alignParentEnd="true"
        android:background="@color/black"
        android:text="@string/logout"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logout"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/refresh" />

</RelativeLayout>
